@@ -47,6 +47,8 @@ documents those changes that are of interest to users and admins.
     same time a block is destroyed and that block just happens to be the
     smallest overlapping block over the bad hardware.
  -- Fix bug when querying accounting looking for a job node size.
+ -- BLUEGENE - fix possible race condition if cleaning up a block and the
+    removal of the job on the block failed.
 
 * Changes in SLURM 2.4.0.rc1
 =============================
